<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_welcoming_vector" />

            <LinearLayout
                android:id="@+id/container_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/technical_support"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/contact_us"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/colorPrimary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/lost_possessions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/colorPrimary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="24dp"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/colorPrimary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/app_licence"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="24dp"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>